Fix: code overflow

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -65,13 +65,13 @@ figure,
 }
 
 // Added to handle code highlighting previously it was in the previous code block
-pre,
-code,
-%vertical-rhythm {
-    margin-bottom: 1;
-    // line wrap in code segments
-    white-space: pre-wrap;
-}
+// pre,
+// code,
+// %vertical-rhythm {
+//     margin-bottom: 1;
+//     // line wrap in code segments
+//     white-space: pre-wrap;
+// }
 
 
 
