--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -54,7 +54,8 @@ figure.highlight {
 }
 
 .highlight pre {
-  width: 100%;
+  // width: 100%;
+  overflow: auto;
 }
 
 .highlight .hll {
